welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: '=' expected but '(' found.
def createTab(num : Int):Array[Color](num)={
                                     ^Array1:20: error: illegal start of simple expression
def remplirTab(num:Int, T : Array[Color]):Array[Color](num)={
^Array1:20: error: '=' expected but '(' found.
def remplirTab(num:Int, T : Array[Color]):Array[Color](num)={
                                                      ^Array1:29: error: illegal start of simple expression
def decale()
^